# vec2vec

./: README.md  netlify.toml
serve/: Cargo.toml  feep.txt  feep.txt~  foop.txt  foop.txt~
serve/data/: 10x10.paths100000.seed1.dist2,3.paths.txt
serve/src/: main.rs
serve/src/www/: index.html  layout.json
serve/src/www/react-app/: package-lock.json  package.json
serve/src/www/react-app/public/: size10x10.paths1000000.seed1.dist2,3.dim100.sample100.layout.json  size10x10.paths1000000.seed1.dist2,3.dim100.sample12.layout.json  size10x10.paths1000000.seed1.dist2,3.dim100.sample25.layout.json  size10x10.paths1000000.seed1.dist2,3.dim100.sample50.layout.json  size10x10.paths1000000.seed1.dist2,3.dim2.sample100.layout.json  size10x10.paths1000000.seed1.dist2,3.dim2.sample12.layout.json  size10x10.paths1000000.seed1.dist2,3.dim2.sample25.layout.json  size10x10.paths1000000.seed1.dist2,3.dim2.sample50.layout.json  size10x10.paths1000000.seed1.dist2,3.dim50.sample100.layout.json  size10x10.paths1000000.seed1.dist2,3.dim50.sample12.layout.json  size10x10.paths1000000.seed1.dist2,3.dim50.sample25.layout.json  size10x10.paths1000000.seed1.dist2,3.dim50.sample50.layout.json  size10x10.paths10000000.seed1.dist2,3.dim100.sample100.layout.json  size10x10.paths10000000.seed1.dist2,3.dim100.sample12.layout.json  size10x10.paths10000000.seed1.dist2,3.dim100.sample25.layout.json  size10x10.paths10000000.seed1.dist2,3.dim100.sample50.layout.json  size10x10.paths10000000.seed1.dist2,3.dim2.sample100.layout.json  (+19 more)
serve/src/www/svelte/: package-lock.json  package.json
(+16 files in other folders)
