[package]
name = "serve"
version = "0.1.0"
authors = ["Mike Moran <mike@houseofmoran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
finalfusion = "0.7.1"
clap = "2.33.0"
statistical = "1.0.0"
serde_json = "1.0.40"
serde = { version="1.0.97", features = ["derive"] }